ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress-test
#   namespace: testtraefik

# spec:
#   rules:
#     - host: localhost
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: whoami-srv
#                 port:
#                   name: web
#           # - path: /
#           #   pathType: Prefix
#           #   backend:
#           #     service:
#           #       name: whoami-srv
#           #       port:
#           #         number: 80
#           # - path: /api
#           #   pathType: Prefix
#           #   backend:
#           #     service:
#           #       name: dashboard
#           #       port:
#           #         number: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress-test
  namespace: testtraefik
  annotations:
    kubernetes.io/ingress.class: "traefik-test"
spec:
  entryPoints:
    - web
    # - websecure
  routes:
    - match: Host(`localhost`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: whoami-srv
          namespace: testtraefik
          port: 80
